--- a/AppartmentSystem/AppartmentSystem/AppartmentSystem.csproj
+++ b/AppartmentSystem/AppartmentSystem/AppartmentSystem.csproj
@@ -61,10 +61,10 @@
     <Compile Include="FinancialData\FinancialData.Designer.cs">
       <DependentUpon>FinancialData.cs</DependentUpon>
     </Compile>
-    <Compile Include="FinancialData\frm_addRoom.cs">
+    <Compile Include="ManageRoom\frm_addRoom.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FinancialData\frm_addRoom.Designer.cs">
+    <Compile Include="ManageRoom\frm_addRoom.Designer.cs">
       <DependentUpon>frm_addRoom.cs</DependentUpon>
     </Compile>
     <Compile Include="Form1.cs">
@@ -145,7 +145,7 @@
     <EmbeddedResource Include="FinancialData\FinancialData.resx">
       <DependentUpon>FinancialData.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FinancialData\frm_addRoom.resx">
+    <EmbeddedResource Include="ManageRoom\frm_addRoom.resx">
       <DependentUpon>frm_addRoom.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
